--- a/layouts/partials/footer_gr6.html
+++ b/layouts/partials/footer_gr6.html
@@ -1,7 +1,8 @@
+{{- $sep := "\t" -}}
 {{- $legal_menu := slice -}}
 {{- $mega_menus := dict -}}
 {{- range $i, $r := getCSV "," $.Site.Params.footer_links -}}
-    {{- $id := (index $r 0 ) }}{{ $item := printf "%s,%s" (index $r 1 ) (index $r 2) -}}
+    {{- $id := (index $r 0 ) }}{{ $item := printf "%s%s%s" (index $r 1 ) $sep (index $r 2) -}}
     {{- if (eq $id "999" ) -}}
         <!-- id = 999 is special footer -->
         {{- $legal_menu = $legal_menu | append $item -}}
@@ -21,7 +22,7 @@
                     {{- $category_title := "" }}{{ $links := slice }}
                     {{- range $i, $r := . }}
                         {{- if eq $i 0 }}
-                            {{- $category_title = index (split $r ",") 0 }}
+                            {{- $category_title = index (split $r $sep) 0 }}
                         {{- else }}
                             {{- $links = $links | append $r }}
                         {{- end }}
@@ -32,7 +33,7 @@
                     </div>
                     <ul class="footer-mega-list-list">
                         {{- range $links }}
-                            {{- $link := (split . ",") }}
+                            {{- $link := (split . $sep) }}
                             {{- $text := index $link 0 }}{{ $href := index $link 1 }}
                             <li class="footer-mega-list-item"><a href="{{ $href }}">{{ $text }}</a></li>
                         {{- end -}}
@@ -45,7 +46,7 @@
     <div class="footer-legal">
         <ul class="footer-legal-list">
             {{- range $legal_menu }}
-                {{- $link := (split . ",") }}
+                {{- $link := (split . $sep) }}
                 {{- $text := index $link 0 }}{{ $href := index $link 1 }}{{- $target := index $link 2 | default "_blank" }}
                 <li class="footer-legal-item">
                     <a href="{{ $href }}" target="{{ $target }}">{{ $text }}</a>
