--- a/static/stylesheets/custom_kin.css
+++ b/static/stylesheets/custom_kin.css
@@ -8,3 +8,46 @@
 .codeblock-wrapper + p {
     margin-top: 0.9em;
 }
+
+/* 「監査ログの一覧」で使用する設定 **************************************/
+
+.audit h2 {
+    font-size:2.0625rem;
+}
+
+.audit .id-header:has(h3){
+    border-bottom: 3px solid #e94f90;
+    border-image: linear-gradient(to right, #287bf4 0%, #e94f90 100%);
+    border-image-slice: 1;
+    margin-bottom: 1.4rem;
+
+}
+
+.audit h3 {
+    line-height: 1.2rem;
+    /* border-left: 12px solid #ffbf00;*/
+    margin-bottom: 0.5rem;
+    padding-top: 0.2em;
+    padding-left: 0;
+    border-left: none;
+    border-image: none;
+    border-image-slice: 0;
+}
+
+.audit h4 {
+    font-size: 1.125rem;
+    border-left: 4px solid #e94f90;
+    border-image: linear-gradient(to top, #287bf4 0%, #e94f90 100%);
+    border-image-slice: 1;
+    line-height: 1em;
+    margin-top: 1.5em;
+    padding-top: 0.4em;
+    padding-left: 0.4em;
+    padding-bottom: 0.4em;
+
+}
+.audit h5 {
+    font-size: 1rem;
+    padding-bottom: 0.4em;
+    line-height: 1.6em;
+}
