--- a/static/stylesheets/custom_kin.css
+++ b/static/stylesheets/custom_kin.css
@@ -20,7 +20,7 @@
 } */
 
 .audit h2 {
-    font-size:2.0625rem;
+    font-size:1.875rem;
     /* line-height: 1em;
     margin-bottom: 1.5rem;
     margin-top: 1em;
@@ -36,7 +36,8 @@
 }
 
 .audit h3 {
-    line-height: 1.2rem;
+    font-size: 1.6rem;
+    line-height: 1.5rem;
     /* border-left: 12px solid #ffbf00;*/
     margin-bottom: 0.5rem;
     padding-top: 0.2em;
@@ -47,7 +48,7 @@
 }
 
 .audit h4 {
-    font-size: 1.125rem;
+    font-size: 1.4rem;
     border-left: 4px solid #ffbf00;
     line-height: 1em;
     margin-top: 1.5em;
@@ -57,7 +58,7 @@
 
 }
 .audit h5 {
-    font-size: 1rem;
+    font-size: 1.125rem;
     padding-bottom: 0.4em;
     line-height: 1.6em;
     /* border-left: 15px solid #ffbf00;
@@ -67,4 +68,8 @@
     padding-left: 0.4em;
     padding-bottom: 0.4em; */
 
+}
+
+.article h6 {
+    font-weight: normal;
 }
