--- a/static/stylesheets/custom_kin.css
+++ b/static/stylesheets/custom_kin.css
@@ -9,8 +9,7 @@
     margin-top: 0.9em;
 }
 
-/* 「監査ログの一覧」で使用する設定 **************************************/
-
+/* Section audit logs -------------------------------------- */
 .audit h2 {
     font-size:1.875rem;
 }
@@ -20,13 +19,11 @@
     border-image: linear-gradient(to right, #287bf4 0%, #e94f90 100%);
     border-image-slice: 1;
     margin-bottom: 1.4rem;
-
 }
 
 .audit h3 {
-    font-size: 1.6rem;
-    line-height: 1.2rem;
-    /* border-left: 12px solid #ffbf00;*/
+    font-size: 1.625rem;
+    line-height: 1.2em;
     margin-bottom: 0.5rem;
     padding-top: 0.2em;
     padding-left: 0;
@@ -36,7 +33,7 @@
 }
 
 .audit h4 {
-    font-size: 1.4rem;
+    font-size: 1.375rem;
     border-left: 4px solid #e94f90;
     border-image: linear-gradient(to top, #287bf4 0%, #e94f90 100%);
     border-image-slice: 1;
@@ -50,9 +47,15 @@
 .audit h5 {
     font-size: 1.125rem;
     padding-bottom: 0.4em;
-    line-height: 1.6em;
 }
 
 .article h6 {
     font-weight: normal;
+}
+
+.audit h3 + .id-link-button {
+    margin-top: 2.8125rem;
+}
+.audit h4 + .id-link-button {
+    margin-top: 2.5rem;
 }
