--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -118,7 +118,8 @@
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/video_list.css" $buildnum | relURL }}">
     <script src="https://cdn.jsdelivr.net/npm/axios@1.2.2/dist/axios.min.js"></script>
     {{- end}}
-    {{- if and (eq $.Site.Params.product "Garoon") (eq $.Site.Params.service_type_id "on-premise") -}}
+    {{- $u := urls.Parse $.Site.BaseURL }}
+    {{- if ( hasPrefix $u.Path "/g6/" ) -}}
     <script src="{{ printf "%s?%s" "javascripts/custom_gr6.js" $buildnum | relURL }}"></script>
     {{- end -}}
     {{- if or
