--- a/layouts/partials/pagenav2.html
+++ b/layouts/partials/pagenav2.html
@@ -4,7 +4,7 @@
     <div class="pagination-previous"></div>
         {{ else }}
     <div class="pagination-previous">
-        <i class="fas fa-caret-left"></i>
+        <i class="fas fa-caret-left" aria-hidden="true"></i>
         <a href="{{ .Permalink }}">{{ i18n "Previous_page" }}</a>
     </div>
         {{- end }}
@@ -12,7 +12,7 @@
     {{- with .Site.Pages.Prev . }}
     <div class="pagination-next">
         <a href="{{ .Permalink }}">{{ i18n "Next_page" }}</a>
-        <i class="fas fa-caret-right"></i>
+        <i class="fas fa-caret-right" aria-hidden="true"></i>
     </div>
     {{- end }}
 </nav>
