--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -2,9 +2,10 @@
   --color-body: #222;
   --color-secondary: #666;
   --bg-primary-color: #fff;
-  --bg-secondary-color: #f3f3f3;
+  --bg-secondary-color: #f6f6f6;
   --link-primary-color: #1b72cd;
   --link-secondary-color: #fff;
+  --link-tertiary-color: #1b70cc;
   --border-color: #c9c9c9;
 }
 
@@ -207,7 +208,7 @@
 .footer-mega-list-list {
   list-style: inside;
   margin: 8px 0 0 24px;
-  color: var(--link-primary-color);
+  color: var(--link-tertiary-color);
 }
 
 .footer-legal {
@@ -306,7 +307,7 @@
   .footer-mega-list-list {
     list-style: inside;
     margin: 16px 0 0 32px;
-    color: var(--link-primary-color);
+    color: var(--link-tertiary-color);
   }
 
   .footer-legal {
