--- a/layouts/partials/applyparams.html
+++ b/layouts/partials/applyparams.html
@@ -13,4 +13,5 @@
 {{- $t11 := replaceRE "{{<\\s*product_name\\s*>}}" $params.product_name $t10 }}
 {{- $t12 := replaceRE "{{<\\s*slash_ui\\s*>}}" $params.slash_ui $t11 }}
 {{- $t13 := replaceRE "{{<\\s*slash_administrators\\s*>}}" $params.slash_administrators $t12 }}
-{{- return ( $t13 | safeHTML ) }}
+{{- $t14 := replaceRE "{{<\\s*slash_service_name\\s*>}}" $params.slash_service_name $t13 }}
+{{- return ( $t14 | safeHTML ) }}
