use fontawesome CDN

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -87,7 +87,7 @@
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/application.css" $buildnum | relURL }}">
     <link rel="stylesheet" href="{{ "stylesheets/zoom.css" | relURL }}">
 
-    <script src="https://kit.fontawesome.com/5b68479252.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     {{- if .IsHome}}
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/home.css" $buildnum | relURL }}">
     {{- end }}
