--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,12 +18,12 @@
                 {{- $u := urls.Parse $.Site.BaseURL }}
                 {{- if ( hasPrefix $u.Path "/g6/" ) -}}{{- else -}}
                 <div class="search-wrap">
-                    <form id="headerSearchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html"　onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}' role="search">
+                    <form id="headerSearchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_form").value==""){return false;}' role="search">
                         <div class="searchbox">
                             <input type="search" name="q" id="topSearchBox_input" class="search-input" placeholder='{{ i18n "Enter_keywords" }}' aria-label='{{i18n "search_word"}}'>
                             <button type="submit" name="commit" value="" class="search-submit" data-disable-with="" aria-label='{{i18n "search"}}'></button>
                         {{- if ne .Site.Params.google_search true }}
-                            <input type="hidden" name="ct" value="{{ .Site.Language.Params.search_all }}">
+                            <input type="hidden" name="ct" value="{{ .Site.Params.search_all }}">
                         {{- end }}
                         </div>
                     </form>
@@ -37,7 +37,7 @@
         </article>
     </main>
     {{- if eq .Site.Params.google_search true }}
-        {{- $glang := $.Site.Language.Lang}}
+        {{- $glang := .Lang}}
         {{- if eq $glang "zh" }}
             {{- $glang = "zh-CN" }}
         {{- else if eq $glang "zh-tw" }}
