--- a/layouts/partials/announcementbanner.html
+++ b/layouts/partials/announcementbanner.html
@@ -1,7 +1,7 @@
 {{- $msg := slice "session-notice-1" "#f9aeb6" "fas fa-exclamation-triangle" "#cd1b49" (i18n "Unsupported_browser") (i18n "Unsupported_message") }}
 {{- template "makeannouncebanner" $msg }}
 
-{{- $announcementfile := printf "csv/%s/announcement_%s.csv" $.Site.Language.Lang $.Site.Params.TargetRegion }}
+{{- $announcementfile := printf "csv/%s/announcement_%s.csv" $.Lang $.Site.Params.TargetRegion }}
 {{- if os.FileExists $announcementfile }}
     {{- range $i, $r := (getCSV "," $announcementfile) }}
         {{- template "makeannouncebanner" $r }}
