--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -27,7 +27,7 @@
         {{- end }}
     </div>
     <div id="contents" class="contents-wrap">
-        {{- if and (eq $.Site.Params.product "Garoon") (ne $.Site.Params.languageCode "ja-jp") (ne $.Site.Params.languageCode "ja-cn") }}
+        {{- if and (eq $.Site.Params.product "Garoon") (ne $.Site.LanguageCode "ja-jp") (ne $.Site.LanguageCode "ja-cn") }}
             {{ partial "disclaimer" . }}
         {{- end }}
         <main id="main" role="main"> 
