updated wovn customize

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -19,7 +19,7 @@
                 {{ partial "treenav2" . }}
             {{- end }}
         {{- else }}
-            {{- if eq $.Site.Params.product "kintone" }}
+            {{- if eq $.Site.Params.json_tree true }}
                 {{ partial "treenav3" . }}
             {{- else }}
                 {{ partial "treenav" . }}
@@ -29,6 +29,9 @@
     <div id="contents" class="contents-wrap">
         {{- if and (eq $.Site.Params.product "Garoon") (ne $.Site.LanguageCode "ja-jp") (ne $.Site.LanguageCode "ja-cn") }}
             {{ partial "disclaimer" . }}
+        {{- end }}
+        {{- if eq $.Site.Params.use_wovn true }}
+            {{ partial "disclaimer2" . }}
         {{- end }}
         <main id="main" role="main"> 
             {{- partial "breadcrumb" . -}}
