--- a/layouts/partials/langselector.html
+++ b/layouts/partials/langselector.html
@@ -8,7 +8,29 @@
         <ul id="alter-lang" class="alter-lang" role="listbox" tabindex="-1" aria-hidden="true">
             {{- range .Translations }}
                 <li id="lang_item_{{ .Site.LanguageCode }}" class="lang-item" role="option" desturl="{{ .RelPermalink }}"><span class="lang-title">{{ .Site.Language.LanguageName }}</span></li>
+            {{- end -}}
+
+            {{- if eq .Site.Params.use_wovn true }}
+                {{- $urlParts := split .RelPermalink "/" }}
+                {{- $additionalLangs := index .Site.Data "language_list" }}
+                {{- range $additionalLangs.languages }}
+                    {{- $languageCode := .language_code }}
+                    {{- $idx := 0 }}
+                    {{- $newTarget := "" }}
+                    {{- range $urlParts }}
+                        {{- if ne . "" }}
+                            {{- if eq $idx 2 }}
+                                {{- $newTarget = printf "%s/%s" $newTarget $languageCode }}
+                            {{- else }}
+                                {{- $newTarget = printf "%s/%s" $newTarget . }}
+                            {{- end }}
+                        {{- end }}
+                        {{- $idx = add $idx 1 }}
+                    {{- end }}
+                <li id="lang_item_{{$languageCode}}" class="lang-item" role="option" desturl="{{$newTarget}}"><span class="lang-title">{{ .display_name }}</span></li>
+                {{- end }}
             {{- end }}
+
         </ul>
     </div>
 </div>
