fixed_pagenav2 不要な記号が入っていたので修正

--- a/layouts/partials/pagenav2.html
+++ b/layouts/partials/pagenav2.html
@@ -12,7 +12,7 @@
 
 {{- if ne (.Site.Pages.Prev .) nil }}
     {{- with .Site.Pages.Prev . }}
-      {{- if ne .IsHome true }} <<!-- home page of kintone tutorial is not visible -->
+      {{- if ne .IsHome true }} <!-- home page of kintone tutorial is not visible -->
     <div class="pagination-next">
         <a href="{{ .Permalink }}">{{ i18n "Next_page" }}</a>
         <i class="fas fa-caret-right" aria-hidden="true"></i>
