modified scrolling area of kintone-tutorial

--- a/layouts/kintone_tutorial/baseof.html
+++ b/layouts/kintone_tutorial/baseof.html
@@ -36,6 +36,7 @@
 
 </head>
   <body class="font-{{.Lang}}">
+    <div class="tutorial-page-header"></div>
     <div class="tutorial-page" >
         <div class="tutorial-index-wrap">
             <div class="tutorial-title-wrap">
@@ -74,5 +75,6 @@
             </main>
         </div>
     </div>
+    <div class="tutorial-page-footer"></div>
   </body>
 </html>
